added find map in chouch.

--- a/your-code/sample-code-Copy2.ipynb
+++ b/your-code/sample-code-Copy2.ipynb
@@ -18,11 +18,12 @@
     "import winsound\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
+    "import os\n",
     "\n",
     "\n",
     "couch = {\n",
     "    \"name\": \"couch\",\n",
-    "    \"type\": \"poison\",\n",
+    "    \"type\": \"map\",\n",
     "}\n",
     "\n",
     "door_a = {\n",
@@ -122,13 +123,13 @@
     "\n",
     "dining_table = {\n",
     "    \"name\": \"dining table\" ,\n",
-    "    \"type\": \"furniture\",\n",
+    "    \"type\": \"poison\",\n",
     "}\n",
     "\n",
     "\n",
     "living_room = {\n",
     "    \"name\": \"living room\",\n",
-    "    \"type\": \"room\",\n",
+    "    \"type\": \"furniture\",\n",
     "    \n",
     "}\n",
     "\n",
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +202,12 @@
     "    \"\"\"\n",
     "    Start the game\n",
     "    \"\"\"\n",
-    "    print(\"You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\")\n",
+    "    print(\"You wake up on a couch and find yourself in a creepy house with no windows which you have never been to before. It seems a Dream. You feel dizzy and achy. Something weird happened to you.You don't remember why you are here and what had happened before. There is a piece of paper next to you: 'you have been poisoned, find the antidote'. It is time to go. NOW!\")\n",
     "    #sound()\n",
-    "    play_room(game_state[\"current_room\"])\n",
+    "    play_room(game_state[\"current_room\"])   #######\"current_room\"\n",
     "    \n",
     "def wine():    #glass of wine function: if you drink game restart. if no continue(inserting image and stop sound)\n",
-    "    intended_action = input(\"You find a glass of wine with the following statement: If you drink it, it will help you ending the game. Do you want to drink it? 'yes' or 'no'\")\n",
+    "    intended_action = input(\"You find a glass of wine with the following statement: This is the antidote. Do you want to drink it? 'yes' or 'no'\")\n",
     "    if intended_action == \"yes\":\n",
     "        \n",
     "        %pylab inline\n",
@@ -216,20 +217,30 @@
     "        print(\"YOU DIED STUPID. PLEASE TRY AGAIN\")\n",
     "        sound_off()\n",
     "        \n",
-    "        game_state = INIT_GAME_STATE.copy()\n",
-    "\n",
-    "        start_game()\n",
+    "        \n",
+    "        restart()\n",
+    "        #game_state = INIT_GAME_STATE.copy()  ##### HOW TO RESTART GAME????\n",
+    "        #start_game()\n",
+    "        #play_room(\"game room\")\n",
     "        \n",
     "        \n",
     "    elif intended_action == \"no\":    # can be done better instead of print re-entering in the right loop\n",
-    "        print(\"You are now in game room\")\n",
+    "        print(\"You are now in living room\")\n",
     "    else:\n",
     "        print(\"Not sure what you mean. Do you want to drink it? 'yes' or 'no'\")\n",
     "        \n",
+    "def restart():\n",
+    "    while 1:\n",
+    "        os.system(\"sample-code-Copy2.ipynb\")\n",
+    "        print (\"Restarting...\")\n",
+    "        exit()  \n",
     "            \n",
-    "            \n",
-    "        \n",
-    "        \n",
+    "def maps():\n",
+    "    print(\"You find a map!\")\n",
+    "    %pylab inline\n",
+    "    img = mpimg.imread('mappa.jpg')\n",
+    "    imgplot = plt.imshow(img)\n",
+    "    plt.show()    \n",
     "         \n",
     "      \n",
     "    \n",
@@ -242,7 +253,7 @@
     "    \"\"\"\n",
     "    game_state[\"current_room\"] = room\n",
     "    if(game_state[\"current_room\"] == game_state[\"target_room\"]):\n",
-    "        print(\"Congrats! You escaped the room!\")\n",
+    "        print(\"Congrats! You escaped the room! you have found the antidote. You woke up: It was just a dream\")\n",
     "        sound_off()\n",
     "        \n",
     "    \n",
@@ -316,7 +327,8 @@
     "                    output += \"There isn't anything interesting about it.\"\n",
     "            if (item[\"type\"] == 'poison'):\n",
     "                wine()       \n",
-    "                     \n",
+    "            if (item[\"type\"] == 'map'): \n",
+    "                maps()\n",
     "                \n",
     "            print(output)\n",
     "            break\n",
@@ -339,18 +351,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "root.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You wake up on a couch and find yourself in a creepy house with no windows which you have never been to before. It seems a Dream. You feel dizzy and achy. Something weird happened to you.You don't remember why you are here and what had happened before. There is a piece of paper next to you: 'you have been poisoned, find the antidote'. It is time to go. NOW!\n",
+      "You are now in game room\n"
+     ]
+    }
+   ],
    "source": [
     "game_state = INIT_GAME_STATE.copy()\n",
     "\n",
