--- a/your-code/sample-code-Copy3.ipynb
+++ b/your-code/sample-code-Copy3.ipynb
@@ -285,7 +285,7 @@
     "    Start the game\n",
     "    \"\"\"\n",
     "    print(\"\\033[1m\" + \"You wake up on a couch and find yourself in a creepy house with no windows which you have never been to before. It seems a Dream. You feel dizzy and achy. Something weird happened to you.You don't remember why you are here and what had happened before. There is a piece of paper next to you: 'you have been poisoned, find the antidote'. It is time to go. NOW!\" + \"\\033[0m\")\n",
-    "    sound()\n",
+    "    #sound()\n",
     "    play_room(game_state[\"current_room\"])   #######\"current_room\"\n",
     "    \n",
     "def wine():    #glass of wine function: if you drink game restart. if no continue(inserting image and stop sound)\n",
@@ -503,32 +503,8 @@
       "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
       "You are now in bedroom 1\n",
       "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door b\n",
-      "You examine door b. It is locked but you don't have the key.\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
       "What would you like to examine?queen bed\n",
       "You examine queen bed. You find key for door b.\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
       "You are now in bedroom 1\n",
       "What would you like to do? Type 'explore' or 'examine'?examine\n",
       "What would you like to examine?door b\n",
@@ -541,8 +517,8 @@
       "You are now in bedroom 2\n",
       "What would you like to do? Type 'explore' or 'examine'?examine\n",
       "What would you like to examine?dresser\n",
-      "('riddle3', 'If you drop me I’m sure to crack, but give me a smile and I’ll always smile back. What am I?')\n",
-      "candle\n",
+      "('riddle1', 'I’m tall when I’m young and I’m short when I’m old. What am I?')\n",
+      "mirror\n",
       "You examine dresser. You find key for door d.\n",
       "You are now in bedroom 2\n",
       "What would you like to do? Type 'explore' or 'examine'?examine\n",
@@ -550,13 +526,10 @@
       "You examine door d. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
       "You are now in living room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?dining table\n",
-      "You find a glass of wine with the following statement: This is the antidote. Do you want to drink it? 'yes' or 'no'no\n",
+      "What would you like to do? Type 'explore' or 'examine'?explore\n",
+      "You explore the room. This is living room. You find dining table, old tv, door d, door e, door f, door g\n",
       "You are now in living room\n",
-      "You examine dining table. There isn't anything interesting about it.\n",
-      "You are now in living room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
+      "What would you like to do? Type 'explore' or 'examine'?examine \n",
       "What would you like to examine?old tv\n",
       "You examine old tv. You find key for door f.\n",
       "You are now in living room\n",
@@ -593,21 +566,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
       "\n",
       "\n",
       "\n",
